# mirror_focusing

./: .gitignore  .gitmodules  CMakeLists.txt
analyze/knifeedge_1urad/: Untitled.ipynb
design_ringfocus/: Untitled.ipynb  constants.hpp  main.cpp
ellipse/: check.ipynb  constants.hpp  foucault_test.cpp  hybrid_propagation.cpp  image.txt  knifeedge_scan.cpp  main.cpp  raytrace_test.cpp  simple.cpp
parabola/: constants.hpp  main.cpp
plane/: constants.hpp  main.cpp
propagation_test/: constants.hpp  main.cpp
test/: main.cpp
